week5-platform-engineering/W5D6/yaml/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: demo-gateway-class
spec:
  controllerName: example.com/gateway-controller
