week5-platform-engineering/W5D6/yaml/backend-v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-v1

spec:
  selector:
    app: backend-v1

  ports:
  - port: 80
