week5-platform-engineering/W5D6/yaml/backend-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-v2

spec:
  selector:
    app: backend-v2

  ports:
  - port: 80
