week5-platform-engineering/W5D6/yaml/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: platform-gateway
spec:
  gatewayClassName: demo-gateway-class

  listeners:
  - name: http
    protocol: HTTP
    port: 80
