week5-platform-engineering/W5D6/yaml/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-route

spec:
  parentRefs:
  - name: platform-gateway

  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /

    backendRefs:
    - name: frontend-service
      port: 80
