week5-platform-engineering/W5D6/yaml/multi-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app-routes

spec:
  parentRefs:
  - name: platform-gateway

  rules:

  - matches:
    - path:
        type: PathPrefix
        value: /api

    backendRefs:
    - name: api-service
      port: 80

  - matches:
    - path:
        type: PathPrefix
        value: /web

    backendRefs:
    - name: web-service
      port: 80
