week5-platform-engineering/W5D6/yaml/namespace-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app-route
  namespace: application

spec:
  parentRefs:
  - name: platform-gateway
    namespace: platform

  rules:
  - backendRefs:
    - name: frontend-service
      port: 80
