week5-platform-engineering/W5D6/yaml/weighted-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: canary-route

spec:
  parentRefs:
  - name: platform-gateway

  rules:

  - backendRefs:

    - name: backend-v1
      port: 80
      weight: 90

    - name: backend-v2
      port: 80
      weight: 10
